Updated code for rest of home

--- a/index.html
+++ b/index.html
@@ -23,9 +23,19 @@
                 </ul>
             </nav>
         </header>
-    </main>
-    <main id="loggedIn">
-
+        <section id="home">
+            <div id="main-section">
+                <h1 class="quote">Next Level Organisation</h1>
+                <h1 class="quote">Next Level <strong>Meals</strong></h1>
+                <button id="button-get-started">Get Started</button>
+            </div>
+        </section>
+        <section id="about">
+            
+        </section>
+        <section id="get-started">
+            
+        </section>
     </main>
     <script src="app.js"></script>
 </body>
